testdata/baselines/reference/submodule/compiler/jsdocImportTypeResolution.errors.txt
usage.js(5,12): error TS2304: Cannot find name 'options'.


==== module.js (0 errors) ====
    export class MyClass {
    }
    
==== usage.js (1 errors) ====
    /**
     * @typedef {Object} options
     * @property {import("./module").MyClass} option
     */
    /** @type {options} */
               ~~~~~~~
!!! error TS2304: Cannot find name 'options'.
    let v;